--- a/style.css
+++ b/style.css
@@ -1,28 +1,136 @@
+* {
+    box-sizing: border-box;
+    width: auto;
+}
+
 body {
-    margin: 10px;
     display: flex;
     flex-direction: column;
+    margin: 0;
+    padding: 0;
 }
 
 .header {
     padding: 20px;
     display: flex;
-    /* flex-direction: column; */
+    background-color: #1f2937;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
 }
-/* .link {
+
+.header_logo {
+    font-size: 24px;
+    color: #f9faf8;
+}
+
+.link {
     display: flex;
-    flex-direction: column;
-} */
+    justify-content: space-between;
+    align-items: flex-start;
+    border: 2px solid red;
+}
 
 .link__ {
+    border: 2px solid blue;
+    margin: 0px;
+    padding: 10px;
     display: flex;
+    align-items: center;
+    justify-content: space-between;
     gap: 10px;
 }
 
+a {
+    text-decoration: none;
+}
+
 ul {
-    /* list-style-type: none; */
+    list-style-type: none;
+}
+
+.about {
+    display: flex;
+    background-color: #1f2937;
+    height: 460px;
+}
+
+.about .title {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #f9faf8;
+}
+
+.about .subtitle {
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
 .image {
     background-color: red;
+}
+
+button {
+    background-color: #3882f6;
+}
+
+.feature {
+    /* margin: 10px;
+    padding: 10px; */
+    height: 500px;
+}
+
+.feature .info {
+    display: flex;
+    justify-content: center;
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: bolder;
+}
+
+.feature .container {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.quote {
+    display: flex;
+    background-color: #e5e7eb;
+    color: #1f2937;
+    font-size: 36px;
+    font-weight: lighter;
+    height: 430px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.quote__ {
+    font-style: italic;
+}
+
+.by {
+    font-weight: bold;
+}
+
+.contact {
+    height: 370px;
+    padding: 150px;
+}
+
+.contact__ {
+    display: flex;
+    background-color: #3882f6;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer {
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
 }
