--- a/style.css
+++ b/style.css
@@ -1,136 +1,33 @@
-* {
-    box-sizing: border-box;
-    width: auto;
-}
 
-body {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0;
-}
+/*  Dark bg
 
-.header {
-    padding: 20px;
-    display: flex;
-    background-color: #1f2937;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-}
+    1. Dark background color (Hero and Footer)
+    #1F2937
 
-.header_logo {
-    font-size: 24px;
-    color: #f9faf8;
-}
+   2. Hero-main text
+    48px extra-bold, #F9FAF8
 
-.link {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    border: 2px solid red;
-}
+   3. Hero-secondary text, header link text
+    18px, #E5E7EB
 
-.link__ {
-    border: 2px solid blue;
-    margin: 0px;
-    padding: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 10px;
-}
+   4. Header logo text 
+    24px, #F9FAF8
+*/
 
-a {
-    text-decoration: none;
-}
+/* White bg
 
-ul {
-    list-style-type: none;
-}
+   1. Button color, call to action background color
+    #3882F6 
 
-.about {
-    display: flex;
-    background-color: #1f2937;
-    height: 460px;
-}
+   2. Information Heder text
+    #36px extra-bold, #1F2937
+*/
 
-.about .title {
-    font-size: 48px;
-    font-weight: bolder;
-    color: #f9faf8;
-}
+/* Grey bg
 
-.about .subtitle {
-    font-size: 18px;
-    color: #e5e7eb;
-}
-
-.image {
-    background-color: red;
-}
-
-button {
-    background-color: #3882f6;
-}
-
-.feature {
-    /* margin: 10px;
-    padding: 10px; */
-    height: 500px;
-}
-
-.feature .info {
-    display: flex;
-    justify-content: center;
-    color: #1f2937;
-    font-size: 36px;
-    font-weight: bolder;
-}
-
-.feature .container {
-    display: flex;
-    justify-content: space-evenly;
-}
-
-.quote {
-    display: flex;
-    background-color: #e5e7eb;
-    color: #1f2937;
-    font-size: 36px;
-    font-weight: lighter;
-    height: 430px;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+   1. Quote section bg color
+    #E5E7FB
     
-}
-
-.quote__ {
-    font-style: italic;
-}
-
-.by {
-    font-weight: bold;
-}
-
-.contact {
-    height: 370px;
-    padding: 150px;
-}
-
-.contact__ {
-    display: flex;
-    background-color: #3882f6;
-    justify-content: center;
-    align-items: center;
-}
-
-.footer {
-    background-color: #1f2937;
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100px;
-}
+   2. quote text
+    36px light-italic #1F2937
+*/
